target/generated-tests/jj/grammars/jjttcf/TcfGrammar.java
/* TcfGrammar.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. TcfGrammar.java */
// package is different to avoid overwriting the JTB grammar's generated filespackage grammars.jjttcf;
import grammars.jjttcf.ast_vis.*;


// Different from JTB
//import grammars.jjttcf.visitor.*;
public class TcfGrammar/*@bgen(jjtree)*/implements TcfGrammarTreeConstants, TcfGrammarConstants {/*@bgen(jjtree)*/
  protected static JJTTcfGrammarState jjtree = new JJTTcfGrammarState();public static void main(String args [])
  {
    System.err.println("TcfGrammar Reading ...");
    new TcfGrammar(System.in);
    try
    {
      System.err.println("... Parsing ...");
      // Different from JTB (class names, arguments)
      SimpleNode start = Start();
      System.err.println("... Parsing OK, now visiting ...");
      TcfGrammarDefaultVisitor v = new MyVisitor();
      start.jjtAccept(v, "MyData");
      System.err.println("TcfGrammar ending.");
      System.exit(0);
    }
    catch (ParseException e)
    {
      System.err.print("... Oops! ParseException: ");
      System.err.println(e.getMessage());
      e = null;
      System.err.println("TcfGrammar returning");
      System.exit(-2);
    }
    catch (final Exception e)
    {
      System.err.println("... Oops! Exception: ");
      e.printStackTrace();
      System.err.println("TcfGrammar exiting");
      System.exit(-1);
    }
  }

  private static void info(final String aMsg) {
    String tk0 = getToken(0).toString();
    String tk1 = getToken(1).toString();
    String ct0 = tk0 == null ? "!null!" : tk0.length() == 0 ? "!empty!" : tk0;
    String ct1 = tk1 == null ? "!null!" : tk1.length() == 0 ? "!empty!" : tk1;
    System.err.println(aMsg + ", current token = " + ct0 + ", next token = " + ct1);
  }

// Different from JTB (annotation); here SimpleNode return type for main
  static final public SimpleNode Start() throws ParseException {/*@bgen(jjtree) Start */
  Start jjtn000 = new Start(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));int[] iva = new int[] { 11 };
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
info("before 1st choice");
        Tcf();
info("passed jjtTcf()");
        jj_consume_token(0);
info("after 1st EOF");
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.jjtSetLastToken(getToken(0));
// Different from JTB (needs explicit return)
    {if ("" != null) return jjtn000;}
        break;
        }
      case 18:{
System.err.println("nodes will be created or not depending on the input data and differently by JTB and JJT");
info("before 2nd choice");
        try {
          bp_iv1(iva);
        } catch (Exception e) {

        }
info("passed bp_iv1(iva)");
        try {
          bp_iv1$(1);
        } catch (Exception e) {

        }
info("passed bp_iv1$(1)");
        try {
          bp_iv2(iva);
          bp_iv2$(2);
        } catch (Exception e) {

        }
info("passed bp_iv2(iva) bp_iv2$(2)");
        try {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 22:{
            bp_iv3(iva);
            break;
            }
          case 24:{
            bp_iv3_(30);
            break;
            }
          default:
            jj_la1[0] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        } catch (Exception e) {

        }
info("passed bp_iv3(iva) | bp_iv3_(30)");
        try {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 22:{
            bp_iv3(iva);
            break;
            }
          case 23:{
            bp_iv3$(3);
            break;
            }
          default:
            jj_la1[1] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        } catch (Exception e) {

        }
info("passed bp_iv3(iva) | bp_iv3$(3)");
        try {
          bp_iv4(iva);
          bp_iv4$(4);
          bp_iv5(iva);
          bp_iv5$(5);
        } catch (Exception e) {

        }
info("passed bp_iv4(iva) bp_iv4$(4) bp_iv5(iva) bp_iv5$(5)");
        try {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 29:{
            bp_iv6(iva);
            bp_iv7(iva);
            break;
            }
          case 30:{
            bp_iv6$(6);
            bp_iv7$(7);
            break;
            }
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        } catch (Exception e) {

        }
info("passed bp_iv6(iva) bp_iv7(iva) | bp_iv6$(6) bp_iv7$(7)");
        jj_consume_token(0);
info("after 2nd EOF");
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.jjtSetLastToken(getToken(0));
// Different from JTB (needs explicit return)
    {if ("" != null) return jjtn000;}
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    if (jjte000 instanceof IllegalStateException) {
      {if (true) throw (IllegalStateException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
    throw new Error("Missing return statement in function");
}

// Different from JTB (annotation); here void return type
  static final public void Tcf() throws ParseException {/*@bgen(jjtree) Tcf */
  Tcf jjtn000 = new Tcf(JJTTCF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      try {
System.err.println("--- jjtTcf in try ---");
        Identifier();
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case INTEGER_LITERAL:
          case IDENTIFIER:{
            ;
            break;
            }
          default:
            jj_la1[4] = jj_gen;
            break label_1;
          }
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case IDENTIFIER:{
            Identifier();
            break;
            }
          case INTEGER_LITERAL:{
            Integer_literal();
            break;
            }
          default:
            jj_la1[5] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        jj_consume_token(16);
System.err.println("--- jjtTcf should not see a node ';' ---");
        Tcf2();
      } catch (NullPointerException npe) {
System.err.println("--- jjtTcf in catch NPE: swallowed NPE: < " + npe.getMessage() + " >");
    // Different from JTB: must explicitly remove node otherwise will be in the tree
    jjtree.popNode();
      } catch (Exception e) {
System.err.println("--- jjtTcf in catch Ex; could occurr with invalid input; " + e);
    e = null;
      } finally {
System.err.println("--- jjtTcf in finally --- ");
      }
NodeTokenJJT jjtn001 = new NodeTokenJJT(JJTNODETOKENJJT);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
    jjtn001.jjtSetFirstToken(getToken(1));
      try {
        jj_consume_token(17);
      } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
      jjtn001.jjtSetLastToken(getToken(0));
    }
      }
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.jjtSetLastToken(getToken(0));
System.err.println("--- jjtTcf should see '.' and return ---");
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
}

// Different from JTB (annotation); here void return type
  static final public void Tcf2() throws ParseException {/*@bgen(jjtree) Tcf2 */
  Tcf2 jjtn000 = new Tcf2(JJTTCF2);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      try {
System.err.println("--- jjtTcf2 in try ---");
        Identifier();
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case INTEGER_LITERAL:
          case IDENTIFIER:{
            ;
            break;
            }
          default:
            jj_la1[6] = jj_gen;
            break label_2;
          }
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case IDENTIFIER:{
            Identifier();
            break;
            }
          case INTEGER_LITERAL:{
            try {
System.err.println("--- jjtTcf2 in subtry ---");
              Integer_literal();
            } catch (NullPointerException npe) {
System.err.println("--- jjtTcf2 in subcatch NPE: swallowed NPE: < " + npe.getMessage() + " >");
        // Different from JTB: must explicitly remove node otherwise will be in the tree
        jjtree.popNode();
            }
            break;
            }
          default:
            jj_la1[7] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      } catch (Exception e) {
System.err.println("--- jjtTcf2 in catch Ex; could occurr with invalid input; " + e);
    e = null;
      } finally {
System.err.println("--- jjtTcf2 in finally --- ");
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
}

  static final private void bp_iv1(int[] i) throws ParseException, IllegalStateException {/*@bgen(jjtree) bp_iv1 */
  bp_iv1 jjtn000 = new bp_iv1(JJTBP_IV1);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
info("iv1 0");
NodeTokenJJT jjtn001 = new NodeTokenJJT(JJTNODETOKENJJT);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
    jjtn001.jjtSetFirstToken(getToken(1));
      try {
        jj_consume_token(18);
      } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
      jjtn001.jjtSetLastToken(getToken(0));
    }
      }
info("iv1 1");
      jj_consume_token(NUM_2$);
info("iv1 2");
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.jjtSetLastToken(getToken(0));
{if (true) throw new IllegalStateException("dummy ise 1");}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
}

  static final private void bp_iv1$(final int i) throws ParseException, IllegalStateException {
info("iv1$ 0");
    jj_consume_token(19);
info("iv1$ 1");
NodeTokenJJT jjtn001 = new NodeTokenJJT(JJTNODETOKENJJT);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
    jjtn001.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(NUM_3_9);
    } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
      jjtn001.jjtSetLastToken(getToken(0));
    }
    }
info("iv1$ 2");
if (i == 1)
    {
      {if (true) throw new IllegalStateException("dummy ise 1$");}
    }
}

  static final private void bp_iv2(int[] i) throws ParseException, IllegalStateException {/*@bgen(jjtree) bp_iv2 */
  bp_iv2 jjtn000 = new bp_iv2(JJTBP_IV2);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
info("iv2 0");
NodeTokenJJT jjtn001 = new NodeTokenJJT(JJTNODETOKENJJT);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
    jjtn001.jjtSetFirstToken(getToken(1));
      try {
        jj_consume_token(20);
      } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
      jjtn001.jjtSetLastToken(getToken(0));
    }
      }
info("iv2 1");
      jj_consume_token(NUM_2$);
info("iv2 2");
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.jjtSetLastToken(getToken(0));
{if (true) throw new IllegalStateException("dummy ise 2");}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
}

  static final private void bp_iv2$(final int i) throws ParseException, IllegalStateException {
info("iv2$ 0");
    jj_consume_token(21);
info("iv2$ 1");
NodeTokenJJT jjtn001 = new NodeTokenJJT(JJTNODETOKENJJT);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
    jjtn001.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(NUM_3_9);
    } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
      jjtn001.jjtSetLastToken(getToken(0));
    }
    }
info("iv2$ 2");
if (i == 2)
    {
      {if (true) throw new IllegalStateException("dummy ise 2$");}
    }
}

  static final private void bp_iv3(int[] i) throws ParseException, IllegalStateException {/*@bgen(jjtree) bp_iv3 */
  bp_iv3 jjtn000 = new bp_iv3(JJTBP_IV3);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
info("iv3 0");
NodeTokenJJT jjtn001 = new NodeTokenJJT(JJTNODETOKENJJT);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
    jjtn001.jjtSetFirstToken(getToken(1));
      try {
        jj_consume_token(22);
      } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
      jjtn001.jjtSetLastToken(getToken(0));
    }
      }
info("iv3 1");
      jj_consume_token(NUM_2$);
info("iv3 2");
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.jjtSetLastToken(getToken(0));
{if (true) throw new IllegalStateException("dummy ise 3");}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
}
